crates/parsing/tests/snapshots/grammar_tests__expect_parse@forall-visible.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/type/forall-visible.input
---
Input: forall @a. Type

Start { kind: ForallType }
  Token { kind: ForallKw }
  Start { kind: OneOrMore }
    Start { kind: TypeVariableBinding }
      Start { kind: Prefixed }
        Token { kind: At }
        Start { kind: Name }
          Token { kind: Lower }
        Finish
      Finish
    Finish
  Finish
  Token { kind: Period }
  Start { kind: ConstructorType }
    Token { kind: Upper }
  Finish
Finish

