crates/parsing/tests/snapshots/grammar_tests__expect_parse@invalid-do-statement.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/failing/expression/invalid-do-statement.input
---
Input: do
  if a
  f x

Start { kind: DoExpression }
  Start { kind: QualifiedDo }
    Token { kind: DoKw }
  Finish
  Start { kind: OneOrMore }
    Start { kind: DoDiscard }
      Start { kind: IfThenElseExpression }
        Token { kind: IfKw }
        Start { kind: VariableExpression }
          Start { kind: QualifiedName }
            Start { kind: NameRef }
              Token { kind: Lower }
            Finish
          Finish
        Finish
        Error { message: "expected ThenKw" }
        Start { kind: ApplicationExpression }
          Start { kind: VariableExpression }
            Start { kind: QualifiedName }
              Start { kind: NameRef }
                Token { kind: Lower }
              Finish
            Finish
          Finish
          Start { kind: OneOrMore }
            Start { kind: TermArgument }
              Start { kind: VariableExpression }
                Start { kind: QualifiedName }
                  Start { kind: NameRef }
                    Token { kind: Lower }
                  Finish
                Finish
              Finish
            Finish
          Finish
        Finish
        Error { message: "expected ElseKw" }
        Error { message: "expected Expression" }
      Finish
    Finish
  Finish
Finish

