crates/parsing/tests/snapshots/grammar_tests__expect_parse@kinded-type.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/type/kinded-type.input
---
Input: Type :: Type

Start { kind: KindedType }
  Start { kind: ConstructorType }
    Token { kind: Upper }
  Finish
  Token { kind: Colon2 }
  Start { kind: ConstructorType }
    Token { kind: Upper }
  Finish
Finish

