crates/parsing/tests/snapshots/grammar_tests__expect_parse@minus-is-operator-name.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/expression/minus-is-operator-name.input
---
Input: (-)

Start { kind: OperatorNameExpression }
  Start { kind: Wrapped }
    Token { kind: LeftParenthesis }
    Start { kind: NameRef }
      Token { kind: Operator }
    Finish
    Token { kind: RightParenthesis }
  Finish
Finish

