crates/parsing/tests/snapshots/grammar_tests__expect_parse@negate-multiple.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/expression/negate-multiple.input
---
Input: - -1

Start { kind: NegateExpression }
  Start { kind: NameRef }
    Token { kind: Operator }
  Finish
  Start { kind: NegateExpression }
    Start { kind: NameRef }
      Token { kind: Operator }
    Finish
    Start { kind: LiteralExpression }
      Token { kind: LiteralInteger }
    Finish
  Finish
Finish

