crates/parsing/tests/snapshots/grammar_tests__expect_parse@negate-parenthesized.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/expression/negate-parenthesized.input
---
Input: (-1)

Start { kind: ParenthesizedExpression }
  Token { kind: LeftParenthesis }
  Start { kind: NegateExpression }
    Token { kind: Operator }
    Start { kind: LiteralExpression }
      Token { kind: LiteralInteger }
    Finish
  Finish
  Token { kind: RightParenthesis }
Finish

