crates/parsing/tests/snapshots/grammar_tests__expect_parse@negate-simple.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/expression/negate-simple.input
---
Input: -1

Start { kind: NegateExpression }
  Token { kind: Operator }
  Start { kind: LiteralExpression }
    Token { kind: LiteralInteger }
  Finish
Finish

